--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background: url("jojo_1080x1920.jpg") center #45a049/
+  background: url("jojo_1080x1920.jpg") center /
   cover no-repeat fixed;
   font-family: Arial, sans-serif;
   background-color: #f1f1f1;
